Add missing parentheses
While we're no longer using mistral for anything by default this
mistral workflow is missing a parentheses which causes it to fail
execution in the event someone does try to use it.

This was brought to our attention in BZ:1897949

Change-Id: I46dc2be0d528de1945552bd45ef56b3a84ce29af
Signed-off-by: Kevin Carter <kecarter@redhat.com>

--- a/workbooks/derive_params.yaml
+++ b/workbooks/derive_params.yaml
@@ -484,7 +484,7 @@ workflows:
       build_feature_dict:
         on-success: filter_features
         publish:
-          feature_dict: <% dict(DPDK => $.dpdk, SRIOV => $.sriov, HOST => $.dpdk or $.sriov), HCI => $.hci) %>
+          feature_dict: <% dict(DPDK => $.dpdk, SRIOV => $.sriov, HOST => ($.dpdk or $.sriov), HCI => $.hci) %>
 
       filter_features:
         publish:
