Re-add ndctl to nova-compute image
While ndctl was added to kolla with I8ed1b6c1d0985b2a73206bd9249a5664cd80c912
the package is now missing in the tcib created container image. Seems the
change got missed on sync to tcib. This fix adds it back to the nova-compute
container definition.

Closes-Bug: #1904448

Change-Id: I2238eb33f8d6a8df366bdc908dbbc568500179c0
(cherry picked from commit 5a7c14fcabe10bb7946e264483641a9022f6eb1d)

--- a/container-images/tcib/base/os/nova-base/nova-compute/nova-compute.yaml
+++ b/container-images/tcib/base/os/nova-base/nova-compute/nova-compute.yaml
@@ -11,6 +11,7 @@ tcib_packages:
   - e2fsprogs
   - genisoimage
   - iscsi-initiator-utils
+  - ndctl
   - nfs-utils
   - nvme-cli
   - openssh-server
