TCIB: Pick not best when building on centos/ubi
When building on UBI (like we do in upstream CI), we may need some
centos repos. And those may bring conflicts with ubi repos.

Allowing --nobest mode for the package manager, highly likely
resolves those conflicts... as the best effort.

Change-Id: I6db21d1f8c0e531c49c151858de9098639fb05f5
Signed-off-by: Bogdan Dobrelya <bdobreli@redhat.com>

--- a/container-images/tcib/base/base.yaml
+++ b/container-images/tcib/base/base.yaml
@@ -6,6 +6,7 @@ tcib_actions:
     crudini --set /etc/dnf/dnf.conf main exactarch 1 &&
     crudini --set /etc/dnf/dnf.conf main gpgcheck 1 &&
     crudini --set /etc/dnf/dnf.conf main install_weak_deps False &&
+    if [ '{{ tcib_distro }}' == 'centos' ];then crudini --set /etc/dnf/dnf.conf main best False; fi &&
     crudini --set /etc/dnf/dnf.conf main installonly_limit 0 &&
     crudini --set /etc/dnf/dnf.conf main keepcache 0 &&
     crudini --set /etc/dnf/dnf.conf main obsoletes 1 &&
