--- a/container-images/tripleo_containers.yaml
+++ b/container-images/tripleo_containers.yaml
@@ -1,177 +1,177 @@
 container_images:
-- imagename: docker.io/tripleomaster/openstack-aodh-api:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-aodh-api:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-aodh-evaluator:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-aodh-evaluator:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-aodh-listener:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-aodh-listener:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-aodh-notifier:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-aodh-notifier:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-barbican-api:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-barbican-api:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-barbican-keystone-listener:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-barbican-keystone-listener:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-barbican-worker:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-barbican-worker:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-ceilometer-central:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-ceilometer-central:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-ceilometer-compute:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-ceilometer-compute:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-ceilometer-notification:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-ceilometer-notification:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-ceilometer-ipmi:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-ceilometer-ipmi:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-cinder-api:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-cinder-api:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-cinder-backup:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-cinder-backup:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-cinder-scheduler:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-cinder-scheduler:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-cinder-volume:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-cinder-volume:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-collectd:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-collectd:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-cron:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-cron:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-designate-api:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-designate-api:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-designate-backend-bind9:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-designate-backend-bind9:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-designate-central:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-designate-central:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-designate-mdns:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-designate-mdns:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-designate-producer:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-designate-producer:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-designate-sink:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-designate-sink:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-designate-worker:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-designate-worker:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-etcd:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-etcd:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-glance-api:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-glance-api:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-gnocchi-api:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-gnocchi-api:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-gnocchi-metricd:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-gnocchi-metricd:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-gnocchi-statsd:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-gnocchi-statsd:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-haproxy:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-haproxy:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-heat-all:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-heat-all:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-heat-api-cfn:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-heat-api-cfn:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-heat-api:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-heat-api:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-heat-engine:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-heat-engine:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-horizon:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-horizon:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-ironic-api:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-ironic-api:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-ironic-conductor:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-ironic-conductor:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-ironic-inspector:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-ironic-inspector:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-ironic-pxe:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-ironic-pxe:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-ironic-neutron-agent:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-ironic-neutron-agent:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-iscsid:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-iscsid:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-keepalived:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-keepalived:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-keystone:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-keystone:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-manila-api:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-manila-api:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-manila-scheduler:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-manila-scheduler:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-manila-share:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-manila-share:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-mariadb:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-mariadb:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-memcached:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-memcached:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-mistral-api:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-mistral-api:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-mistral-engine:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-mistral-engine:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-mistral-executor:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-mistral-executor:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-mistral-event-engine:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-mistral-event-engine:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-multipathd:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-multipathd:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-neutron-dhcp-agent:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-neutron-dhcp-agent:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-neutron-l3-agent:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-neutron-l3-agent:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-neutron-metadata-agent:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-neutron-metadata-agent:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-neutron-openvswitch-agent:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-neutron-openvswitch-agent:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-neutron-sriov-agent:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-neutron-sriov-agent:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-neutron-mlnx-agent:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-neutron-mlnx-agent:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-neutron-server:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-neutron-server:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-neutron-metadata-agent-ovn:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-neutron-metadata-agent-ovn:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-nova-api:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-nova-api:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-nova-compute-ironic:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-nova-compute-ironic:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-nova-compute:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-nova-compute:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-nova-conductor:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-nova-conductor:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-nova-libvirt:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-nova-libvirt:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-nova-novncproxy:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-nova-novncproxy:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-nova-scheduler:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-nova-scheduler:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-novajoin-notifier:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-novajoin-notifier:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-novajoin-server:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-novajoin-server:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-octavia-api:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-octavia-api:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-octavia-health-manager:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-octavia-health-manager:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-octavia-housekeeping:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-octavia-housekeeping:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-octavia-worker:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-octavia-worker:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-ovn-controller:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-ovn-controller:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-ovn-nb-db-server:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-ovn-nb-db-server:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-ovn-northd:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-ovn-northd:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-ovn-sb-db-server:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-ovn-sb-db-server:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-placement-api:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-placement-api:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-qdrouterd:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-qdrouterd:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-rabbitmq:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-rabbitmq:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-redis:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-redis:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-swift-account:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-swift-account:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-swift-container:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-swift-container:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-swift-object:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-swift-object:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-swift-proxy-server:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-swift-proxy-server:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-zaqar-wsgi:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-zaqar-wsgi:current-tripleo
   image_source: tripleo
 - imagename: quay.ceph.io/ceph-ci/daemon:v4.0.13-stable-4.0-nautilus-centos-7-x86_64
   image_source: ceph
@@ -183,7 +183,7 @@ container_images:
   image_source: prom
 - imagename: quay.io/app-sre/grafana:5.4.3
   image_source: grafana
-- imagename: docker.io/tripleomaster/openstack-tempest:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-tempest:current-tripleo
   image_source: tripleo
-- imagename: docker.io/tripleomaster/openstack-rsyslog:current-tripleo
+- imagename: quay.io/tripleomaster/openstack-rsyslog:current-tripleo
   image_source: tripleo
