Frr image support
This adds support for the Frr container image. Frr can be found at
https://github.com/FRRouting/frr/ and is an implementation of a suite
of different routing protocols.

Change-Id: Ibbdf63ec372e8496d094f45f2eaef49f9a79d464

--- a/container-images/tripleo_containers.yaml
+++ b/container-images/tripleo_containers.yaml
@@ -49,6 +49,8 @@ container_images:
   image_source: tripleo
 - imagename: quay.io/tripleomaster/openstack-etcd:current-tripleo
   image_source: tripleo
+- imagename: quay.io/tripleomaster/openstack-frr:current-tripleo
+  image_source: tripleo
 - imagename: quay.io/tripleomaster/openstack-glance-api:current-tripleo
   image_source: tripleo
 - imagename: quay.io/tripleomaster/openstack-gnocchi-api:current-tripleo
