--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -125,6 +125,8 @@
       queue: tripleo
       jobs:
         - openstack-tox-linters
+        - tripleo-cross-tripleoclient-py37
+        - tripleo-ci-centos-8-content-provider
         - tripleo-buildimage-overcloud-full-centos-8:
             files:
               - ^image-yaml/.*$
