Revert "Removed ubi-8 based jobs"
This reverts commit 4274d92e78af96b6142663bf5667be3002d95757.

Apparently tripleo-ci-centos-8-content-provider is not sufficient
in catching bug like https://bugs.launchpad.net/tripleo/+bug/1909105
So Here adding the tripleo-ci-build-containers-ubi-8 job
in check and gate queue.

Change-Id: Iba5675e37d693664c3b10404c2816f87f294fd6c

--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -58,6 +58,11 @@
               tags:
                 - standalone
             dependencies: *deps_cprovider
+        - tripleo-build-containers-ubi-8:
+            dependencies: *deps_unit_lint
+            files:
+              - ^container-images/.*$
+              - ^tripleo_common/image/builder/.*$
         - tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates:
             vars: *multi_consumer_vars
             dependencies: *deps_cprovider
@@ -121,6 +126,7 @@
     gate:
       queue: tripleo
       jobs:
+        - openstack-tox-py37
         - openstack-tox-linters
         - tripleo-cross-tripleoclient-py37
         - tripleo-ci-centos-8-content-provider
@@ -133,3 +139,8 @@
         - tripleo-buildimage-overcloud-hardened-full-centos-8:
             files:
               - ^image-yaml/.*$
+        - tripleo-build-containers-ubi-8:
+            dependencies: *deps_unit_lint
+            files:
+              - ^container-images/.*$
+              - ^tripleo_common/image/builder/.*$
