--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -9,6 +9,7 @@
       - tripleo-undercloud-jobs-pipeline
       - tripleo-build-containers-jobs
       - tripleo-standalone-scenarios-pipeline
+      - tripleo-upgrades-master-pipeline
     vars:
       ensure_global_symlinks: true
     check:
