Wire up new tripleo upgrades jobs template
The depends-on adds a new upgrade jobs template which is wired up
here. Once wired up across tripleo we can remove excess content
providers with [1].

[1] https://review.opendev.org/c/openstack/tripleo-ci/+/769131
Depends-On: https://review.opendev.org/761188

Change-Id: Ic3641c1b0c3013ba00339f1beab647ece572b6fe

--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -9,6 +9,7 @@
       - tripleo-undercloud-jobs-pipeline
       - tripleo-build-containers-jobs
       - tripleo-standalone-scenarios-pipeline
+      - tripleo-upgrades-victoria-pipeline
     vars:
       ensure_global_symlinks: true
     check:
