Wire up new tripleo upgrades jobs template
The depends-on adds a new upgrade jobs template which is wired up
here. Once wired up across tripleo we can remove excess content
providers with [1].

[1] https://review.opendev.org/c/openstack/tripleo-ci/+/769131
Depends-On: https://review.opendev.org/761188

Change-Id: I62a08c3f82f4db6daeeb14c45ae9ea2e34327dc2

--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -10,6 +10,7 @@
       - tripleo-undercloud-jobs-pipeline
       - tripleo-build-containers-jobs
       - tripleo-standalone-scenarios-pipeline
+      - tripleo-upgrades-train-pipeline
     check:
       jobs:
         - openstack-tox-linters
