--- a/tox.ini
+++ b/tox.ini
@@ -66,6 +66,8 @@ commands =
   coverage report
 
 [testenv:docs]
+deps = -c{env:TOX_CONSTRAINTS_FILE:https://releases.openstack.org/constraints/upper/master}
+       -r{toxinidir}/doc/requirements.txt
 commands =
   sphinx-build -W --keep-going -b html -d doc/build/doctrees doc/source doc/build/html
 
@@ -89,6 +91,7 @@ commands =
     bash -c tools/check_duplicate_jinja_blocks.sh
 
 [testenv:releasenotes]
+deps = {[testenv:docs]deps}
 commands = bash -c tools/releasenotes_tox.sh
 
 [testenv:requirements]
