Create a container for Unbound DNS resolver
This patch sets up TripleO to create a container for the Unbound
DNS resolver. This will be used with Designate deployments to
provide DNS resolver services to the deployment and neutron.

Change-Id: Ifccee277393cc9ab095d1785216d3dacfbf3c5ce
(cherry picked from commit 96d3c1fa0613af6ce8fdef01d5f9d696da993aec)

--- a/container-images/tripleo_containers.yaml
+++ b/container-images/tripleo_containers.yaml
@@ -187,3 +187,5 @@ container_images:
   image_source: tripleo
 - imagename: quay.io/tripleoussuri/centos-binary-rsyslog:current-tripleo
   image_source: tripleo
+- imagename: quay.io/tripleoussuri/centos-binary-unbound:current-tripleo
+  image_source: tripleo
