Create a container for Unbound DNS resolver
This patch sets up TripleO to create a container for the Unbound
DNS resolver. This will be used with Designate deployments to
provide DNS resolver services to the deployment and neutron.

Change-Id: Ifccee277393cc9ab095d1785216d3dacfbf3c5ce

--- a/container-images/tripleo_containers.yaml
+++ b/container-images/tripleo_containers.yaml
@@ -187,3 +187,5 @@ container_images:
   image_source: tripleo
 - imagename: quay.io/tripleomaster/openstack-rsyslog:current-tripleo
   image_source: tripleo
+- imagename: quay.io/tripleomaster/openstack-unbound:current-tripleo
+  image_source: tripleo
