--- a/container-images/tripleo_containers.yaml
+++ b/container-images/tripleo_containers.yaml
@@ -187,3 +187,5 @@ container_images:
   image_source: tripleo
 - imagename: quay.io/tripleovictoria/openstack-rsyslog:current-tripleo
   image_source: tripleo
+- imagename: quay.io/tripleovictoria/openstack-unbound:current-tripleo
+  image_source: tripleo
