Use the new IPA-builder element for installing python-hardware
The python3 file was mieed in Id75c11e5b7c4f3bf73c962bc7e46f5a6021efc5f

Change-Id: Ia244d0fe5964fb8dd43b9cf9d4242a0e2f4abee8
(cherry picked from commit f938e6ee9f1d399c99db3b3dbd718a31587f4aea)

--- a/image-yaml/overcloud-images-python3.yaml
+++ b/image-yaml/overcloud-images-python3.yaml
@@ -44,16 +44,16 @@ disk_images:
     # So we just override the extension instead
     imageext: initramfs
     elements:
-      - ironic-agent
+      - ironic-python-agent-ramdisk
       - ironic-agent-multipath
       - dynamic-login
       - element-manifest
       - network-gateway
       - enable-packages-install
       - override-pip-and-virtualenv
-    packages:
-      - python3-hardware-detect
+      - extra-hardware
     options:
       - "--min-tmpfs=7"
     environment:
+      DIB_EPEL_DISABLED: '1'
       DIB_PYTHON_VERSION: '3'
