Remove layout override and wire up buildimage template instead
This wires up the tripleo-buildimage-jobs and updates buildimage
job overrides in the check layout. The depends-on adds the
files: matches in the template layout so no need to override here.
The gate layout overrides are removed altogether as we don't want
the dependencies: optimization in the gate. Part of wider tripleo-ci
optimization [1].

[1] https://review.opendev.org/q/topic:tripleo-ci-reduce
Depends-On: https://review.opendev.org/c/openstack/tripleo-ci/+/777083

Change-Id: I24615a067a56ac226b07c2ebcf477b3682dfed2f
(cherry picked from commit ca603f39b6d612fd2950cd7d7eb84ae3e2cecff9)

--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -8,6 +8,7 @@
       - tripleo-multinode-container-minimal-pipeline
       - tripleo-undercloud-jobs-pipeline
       - tripleo-build-containers-jobs
+      - tripleo-buildimage-jobs
       - tripleo-standalone-scenarios-pipeline
       - tripleo-upgrades-ussuri-pipeline
     check:
@@ -80,26 +81,11 @@
               - ^container-images/tcib/base/os/octavia.*$
         - tripleo-buildimage-overcloud-full-centos-8:
             dependencies: *deps_unit_lint
-            files:
-              - ^image-yaml/.*$
         - tripleo-buildimage-ironic-python-agent-centos-8:
             dependencies: *deps_unit_lint
-            files:
-              - ^image-yaml/.*$
         - tripleo-buildimage-overcloud-hardened-full-centos-8:
             dependencies: *deps_unit_lint
-            files:
-              - ^image-yaml/.*$
     gate:
       queue: tripleo
       jobs:
         - openstack-tox-linters
-        - tripleo-buildimage-overcloud-full-centos-8:
-            files:
-              - ^image-yaml/.*$
-        - tripleo-buildimage-ironic-python-agent-centos-8:
-            files:
-              - ^image-yaml/.*$
-        - tripleo-buildimage-overcloud-hardened-full-centos-8:
-            files:
-              - ^image-yaml/.*$
